[package]
name = "jq2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde and base types
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.30"
#log lib
log = "0.4"
fast_log = "1.6"
#async runtime lib
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rbs={version="4.4"}
rbatis = { version = "4.4", features = ["debug_mode"]}
#rbdc-sqlite={version = "4.4"}
rbdc-mysql={version = "4.4"}
#rbdc-pg={version = "4.4"}
#rbdc-mssql={version = "4.4"}
once_cell = "1.19.0"
actix-web = "4.5.1"

chrono = { version = "0.4.34", features = ["serde"] }
rand = "0.8.5"
md-5 = "0.10.6"
futures = "0.3.30"

[dev-dependencies]
tokio-test = "*"

